# 20260622-et-cosmology-div-online-workshop-sgwb

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
css/: custom.css
materials/: README.md
materials/notebooks/: 00-installation-setup.ipynb  01-basic-workflow.ipynb  02-metadata-reproducibility.ipynb  03-downstream-integration.ipynb  04-advanced-sgwb.ipynb  config.yaml  population.csv  resource_usage_summary.json
slides/: 01-title.md  02-what-is-gwmock.md  03-at-a-glance.md  04-today-sgwb.md  05-plan.md  06-follow-along.md
